--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ body{
 }
 
 .lboard_section{
-	width: 500px;
-	height: 400px;
+	width: 1000px;
+	height: 730px;
 	margin: 100px auto 0;
 	background: #f94f62;
 	padding: 25px 40px;
@@ -120,4 +120,50 @@ body{
 	border-radius: 5px;
 	border-top-right-radius: 0px;
 	border-bottom-right-radius: 0px;
+}
+
+
+/* MOVEMENTS */
+.movements {
+	grid-row: 3 / span 3;
+	background-color: #fff;
+	border-radius: 1rem;
+	overflow: scroll;
+}
+
+.movements__row {
+	padding: 2.25rem 4rem;
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid #eee;
+}
+
+.movements__type {
+	font-size: 1.1rem;
+	text-transform: uppercase;
+	font-weight: 500;
+	color: #fff;
+	padding: 0.1rem 1rem;
+	border-radius: 10rem;
+	margin-right: 2rem;
+}
+
+.movements__date {
+	font-size: 1.1rem;
+	text-transform: uppercase;
+	font-weight: 500;
+	color: #666;
+}
+
+.movements__type--deposit {
+	background-image: linear-gradient(to top left, #39b385, #9be15d);
+}
+
+.movements__type--withdrawal {
+	background-image: linear-gradient(to top left, #e52a5a, #ff585f);
+}
+
+.movements__value {
+	font-size: 1.7rem;
+	margin-left: auto;
 }
